Añadir componente de inicio de sesión y manejar la selección de categoría en el índice de productos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
-<!-- <app-home></app-home>-->
-<app-products-index></app-products-index>
+<!--<app-home></app-home>-->
+<!--<app-products-index></app-products-index>-->
+<app-login></app-login>
 <app-footer></app-footer>
 <router-outlet></router-outlet>
