--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -8,7 +8,7 @@
         <h1 class="pl-4 pt-4 text-2xl font-semibold text-white">Categories</h1>
         <div class="flex flex-col py-10 justify-center gap-5">
             @for(category of categories; track category.id){
-                <app-category [name]="category.name" [img]="category.img"></app-category>
+                <app-category [name]="category.name" [img]="category.img" (click)="selectCategory(category.id)"></app-category>
             }
         </div>
     </div>
