--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,10 +1,14 @@
 
 <div class="px-6 pr-10 min-w-full lg:pt-0 pt-6">
-<input type="text" class="border rounded-lg w-full px-3 text-lg py-1" [(ngModel)]="searchTerm" (ngModelChange)="filterProducts()" placeholder="Search">
+    <input type="text" class="border rounded-lg w-full px-3 text-lg py-1" [(ngModel)]="searchTerm" (ngModelChange)="filterProducts()" placeholder="Search">
 
-<div class="lg:py-0 py-6 w-full flex flex-wrap">
-    <div *ngFor="let product of filteredProducts" class="w-full md:w-1/2 lg:w-1/3 p-4 min-h-full">
-        <app-card [title]="product.name" [description]="product.description" [image]="product.img" [price]="product.price"></app-card>
+    <div class="lg:py-0 py-6 w-full flex flex-wrap">
+        @for(product of products; track product.id){
+            @if((selectedCategory==0 || product.categoryId==selectedCategory) && (searchTerm=='' || product.name.toLowerCase().includes(searchTerm))){
+                <div class="w-full md:w-1/2 lg:w-1/3 p-4 min-h-full">
+                    <app-card [title]="product.name" [description]="product.description" [image]="product.img" [price]="product.price"></app-card>
+                </div>
+            }
+        }
     </div>
-</div>
 </div>
