--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,6 +1,6 @@
 
 <div class="px-6 pr-10 min-w-full lg:pt-0 pt-6">
-    <input type="text" class="border rounded-lg w-full px-3 text-lg py-1" [(ngModel)]="searchTerm" (ngModelChange)="filterProducts()" placeholder="Search">
+    <input type="text" class="border rounded-lg w-full px-3 text-lg py-1" (input)="filterProducts()" [(ngModel)]="searchTerm" placeholder="Search">
 
     <div class="lg:py-0 py-6 w-full flex flex-wrap">
         @for(product of products; track product.id){
