cart management page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-navbar></app-navbar>
 <!--<app-home></app-home>-->
 <app-products-index></app-products-index>
+<!-- <app-cart></app-cart> -->
 <!--<app-login></app-login>-->
 <app-footer></app-footer>
 <router-outlet></router-outlet>
