--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,4 +1,4 @@
-<div class="w-full px-10 h-auto relative">
+<div class="w-full px-10 h-auto relative hover:cursor-pointer">
     <img class= "rounded-full"src="{{img}}" alt="{{name}}">
     <div class="absolute top-0 left-0 h-full w-full px-10">
         <div class="w-full h-full bg-black bg-opacity-50 rounded-full flex items-center justify-center">
