--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,4 @@
+<!-- penne al pesto - grilled chiken - tiramisu -->
 <app-navbar></app-navbar>
-<!--<app-home></app-home>-->
-<app-products-index></app-products-index>
-<!-- <app-cart></app-cart> -->
-<!--<app-login></app-login>-->
-<app-footer></app-footer>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
