--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,36 +8,41 @@
       <button class="flex items-center px-3 py-2 text-orange-300  hover:text-orange-500" (click)="toggleNavbar()">
         <svg class="fill-current h-5 w-5" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menú</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
       </button>
-      <button class="text-orange-300 hover:text-orange-500 lg:hidden block relative">
+      <button routerLink="/cart" class="text-orange-300 hover:text-orange-500 lg:hidden block relative">
         <svg class="fill-current ml-5 mr-1 mt-2" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M13.5 21c-.276 0-.5-.224-.5-.5s.224-.5.5-.5.5.224.5.5-.224.5-.5.5m0-2c-.828 0-1.5.672-1.5 1.5s.672 1.5 1.5 1.5 1.5-.672 1.5-1.5-.672-1.5-1.5-1.5m-6 2c-.276 0-.5-.224-.5-.5s.224-.5.5-.5.5.224.5.5-.224.5-.5.5m0-2c-.828 0-1.5.672-1.5 1.5s.672 1.5 1.5 1.5 1.5-.672 1.5-1.5-.672-1.5-1.5-1.5m16.5-16h-2.964l-3.642 15h-13.321l-4.073-13.003h19.522l.728-2.997h3.75v1zm-22.581 2.997l3.393 11.003h11.794l2.674-11.003h-17.861z"/>
         </svg>
-        <div class="absolute top-0 right-0 text-xs rounded-full w-4 h-4 flex items-center justify-center bg-orange-300 text-white">{{cartItems.length}}</div>
+        <div class="absolute top-0 right-0 text-xs rounded-full w-4 h-4 flex items-center justify-center bg-orange-300 text-white">{{quantity}}</div>
       </button>
     </div>
     <div class="w-full flex-grow lg:flex lg:flex-row flex-col lg:items-center lg:w-auto " [ngClass]="{'hidden': !showMenu, 'flex': showMenu}">
       <div class= "lg:flex-grow flex lg:flex-row flex-col ">
-        <a href="#" class="block mt-4 lg:inline-block lg:mt-0 text-orange-300 hover:text-orange-500 mr-8">
+        <a routerLink="/home" (click)="setRoute('/home')"class="block mt-4 lg:inline-block lg:mt-0 text-orange-300 hover:text-orange-500 mr-8">
           Home
         </a>
-        <a href="#" class="block mt-4 lg:inline-block lg:mt-0 text-orange-300 hover:text-orange-500 mr-8">
+        <a routerLink="/about-us" class="block mt-4 lg:inline-block lg:mt-0 text-orange-300 hover:text-orange-500 mr-8">
           About us
         </a>
-        <a href="#" class="block mt-4 lg:inline-block lg:mt-0 text-orange-300 hover:text-orange-500 mr-8">
+        <a routerLink="/products" (click)="setRoute('/products')"class="block mt-4 lg:inline-block lg:mt-0 text-orange-300 hover:text-orange-500 mr-8">
           Products
         </a>
-        <a href="#" class="block mt-4 lg:inline-block lg:mt-0 text-orange-300 hover:text-orange-500">
+        <a href="/contact" class="block mt-4 lg:inline-block lg:mt-0 text-orange-300 hover:text-orange-500">
             Contact
         </a>
         
       </div>
       <div class="lg:border-none border-t border-opacity-65 mt-3 lg:mt-0 flex">
-        <a href="#"class="inline-block px-0 py-2 leading-none text-orange-300 border-orange-500 hover:border-transparent hover:text-orange-500  mt-4 mr-4 lg:mt-0">Log In</a>
+        @if(!logged){
+        <a routerLink="/login" class="inline-block px-0 py-2 leading-none text-orange-300 border-orange-500 hover:border-transparent hover:text-orange-500  mt-4 mr-4 lg:mt-0">Log In</a>
         <a href="#" class="inline-block px-4 py-2 leading-none border rounded  border-orange-300 hover:border-transparent text-orange-300 hover:bg-orange-500 hover:text-white mt-4 lg:mt-0">Sign Up</a>
+        }
+        @else{
+        <a routerLink="/profile" class="inline-block px-0 py-2 leading-none text-orange-300 border-orange-500 hover:border-transparent hover:text-orange-500  mt-4 mr-4 lg:mt-0">aljanue</a> 
+        }
       </div>
-      <button class="text-orange-300 hover:text-orange-500 lg:block hidden relative">
+      <button routerLink="/cart" (click)="setRoute('/cart')"class="text-orange-300 hover:text-orange-500 lg:block hidden relative">
         <svg class="fill-current ml-5 mr-1 mt-2" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M13.5 21c-.276 0-.5-.224-.5-.5s.224-.5.5-.5.5.224.5.5-.224.5-.5.5m0-2c-.828 0-1.5.672-1.5 1.5s.672 1.5 1.5 1.5 1.5-.672 1.5-1.5-.672-1.5-1.5-1.5m-6 2c-.276 0-.5-.224-.5-.5s.224-.5.5-.5.5.224.5.5-.224.5-.5.5m0-2c-.828 0-1.5.672-1.5 1.5s.672 1.5 1.5 1.5 1.5-.672 1.5-1.5-.672-1.5-1.5-1.5m16.5-16h-2.964l-3.642 15h-13.321l-4.073-13.003h19.522l.728-2.997h3.75v1zm-22.581 2.997l3.393 11.003h11.794l2.674-11.003h-17.861z"/>
         </svg>
-        <div class="absolute top-0 right-0 text-xs rounded-full w-4 h-4 flex items-center justify-center bg-orange-300 text-white">{{cartItems.length}}</div>
+        <div class="absolute top-0 right-0 text-xs rounded-full w-4 h-4 flex items-center justify-center bg-orange-300 text-white">{{quantity}}</div>
       </button>
     </div>
   </nav>
