--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -6,15 +6,16 @@
         @for(cartItem of cartItems; track cartItem.id){
             <div class=" xl:w-3/4 lg:w-11/12 w-full h-32 min-h-32 rounded-3xl border-2 border-black bg-white flex flex-wrap justify-between overflow-hidden pr-14">
                 <div class="flex h-full justify-center items-center gap-5">
-                    <img class="w-auto h-full object-cover flex object-center border-r-black border-r-2" src="{{cartItem.image}}" alt="{{cartItem.name}}"/>
+                    <img class="w-32 h-full object-cover flex justify-center items-center object-center border-r-black border-r-2" src="{{cartItem.image}}" alt="{{cartItem.name}}"/>
                     <h2 class="md:text-2xl text-xl font-semibold">{{cartItem.name}}</h2>
                 </div>
+                
                 <div class="flex h-full justify-center items-center gap-5">
-                    <button class="bg-orange-400 text-white w-8 h-8 font-bold rounded-lg hover:bg-orange-600 hover:cursor-pointer" (click)="changeQuantity(cartItem, 0)">-</button>
-                    <p class="md:text-xl text-lg">{{cartItem.quantity}}</p>
-                    <button class="bg-orange-400 text-white w-8 h-8 font-bold rounded-lg hover:bg-orange-600 hover:cursor-pointer" (click)="changeQuantity(cartItem, 1)">+</button>
-                </div>
-                <div class="flex h-full justify-center items-center gap-5">
+                    <div class="flex h-full justify-center items-center gap-5 mr-12">
+                        <button class="bg-orange-400 text-white w-8 h-8 font-bold rounded-lg hover:bg-orange-600 hover:cursor-pointer" (click)="changeQuantity(cartItem, 0)">-</button>
+                        <p class="md:text-xl text-lg">{{cartItem.quantity}}</p>
+                        <button class="bg-orange-400 text-white w-8 h-8 font-bold rounded-lg hover:bg-orange-600 hover:cursor-pointer" (click)="changeQuantity(cartItem, 1)">+</button>
+                    </div>
                     <p class="md:text-2xl text-xl font-semibold">{{cartItem.price}}€</p>
                     <svg (click)='removeItem(cartItem)'class="fill-orange-500 hover:cursor-pointer hover:fill-orange-600" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M19 24h-14c-1.104 0-2-.896-2-2v-16h18v16c0 1.104-.896 2-2 2m-9-14c0-.552-.448-1-1-1s-1 .448-1 1v9c0 .552.448 1 1 1s1-.448 1-1v-9zm6 0c0-.552-.448-1-1-1s-1 .448-1 1v9c0 .552.448 1 1 1s1-.448 1-1v-9zm6-5h-20v-2h6v-1.5c0-.827.673-1.5 1.5-1.5h5c.825 0 1.5.671 1.5 1.5v1.5h6v2zm-12-2h4v-1h-4v1z"/></svg>
                 </div>
